Fix z-index with confetti canvas

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,6 +16,7 @@
 }
 
 .footer{
+  z-index: 999;
   max-height: 20vh;
   overflow: hidden;
   display: flex;
